--- a/WinFormsApp/UiStrings.resx
+++ b/WinFormsApp/UiStrings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Button_Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
   <data name="Label_ApiKey" xml:space="preserve">
     <value>Clé API :</value>
   </data>
